<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MALA</string>
    <string name="action_settings">Settings</string>
    <string name="dolch_list_button_text">Word List</string>
    <string name="text_to_speech_button_text">Text To Speech</string>
    <string name="speech_recognition_button_text">Speech to Text</string>
    <string name="vocabulary_builder_button_text">Vocabulary Builder</string>
    <string name="exercises_button_text">Alphabet</string>
    <string name="action_help">Help</string>
    <string name="dolch_card_text">Text Here</string>
    <string name="dolch_card_record_button_text">Record</string>
    <string name="dolch_card_play_button_text">Play</string>
    <string name="dolch_card_next_button_text">Next</string>
    <string name="dolch_card_prev_button_text">Prev</string>
    <string name="dolch_list_activity_label"></string>
    <string name="speech_phrase">Say the Phrase</string>
    <string name="stt_not_supported">Speech To Text Not Supported</string>
    <string name="tts_word_check_play_button">Go</string>
    <string name="tts_edit_text_hint">Text to convert goes here...</string>
    <string name="tts_word_check_label">Text To Speech Word Check</string>
    <string name="text_view_text">Hello this is text</string>
    <string name="button_save">Button</string>
    <string name="click_here_to_save_text">Click here to save text from TextView</string>
    <string name="accessibility_service_label">Accessibility Service Example</string>
    <string name="accessibility_service_description">Accessibility Service description goes here</string>
    <string name="home_screen_label">MALA</string>
    <string name="dolch_word_favourite_hint">Click here to add this word to your vocabulary builder</string>
    <string name="enter_email_address_content_description">Enter email address here</string>
    <string name="password_input_hint">Password</string>
    <string name="enter_password_content_description">Enter password here</string>
    <string name="login_button_text">SIGN IN</string>
    <string name="register_account_button_text">REGISTER</string>
    <string name="login_button_content_description">Click here to sign in to your account</string>
    <string name="register_screen_button_content_description">Click here to create an account</string>
    <string name="register_name_edittext_hint">Name</string>
    <string name="register_name_edittext_content_description">Enter name here</string>
    <string name="register_email_edittext_hint">Email</string>
    <string name="register_email_edittext_content_description">Enter email address here</string>
    <string name="register_password_edittext_hint">Password</string>
    <string name="register_password_edittext_content_description">Enter password here</string>
    <string name="register_button_text">REGISTER</string>
    <string name="register_button_content_description">Click here to submit registration details</string>
    <string name="login_screen_button_text">LOGIN</string>
    <string name="login_screen_button_content_description">Click here to go to login screen</string>
    <string name="camera_button_content_description">Click here to take picture</string>
    <string name="ocr_button_text">Image to Text</string>
    <string name="ocr_result_label_text">OCR Result</string>
    <string name="drag_drop_button_text">Text Here</string>
    <string name="drag_drop_text">Text Here</string>
    <string name="drag_drop_game_label"></string>
    <string name="alphabet_word_favourite_hint">Click here to ad this word to your vocabulary builder</string>
    <string name="alphabet_previous_button_text">Prev</string>
    <string name="alphabet_play_button_text">Play</string>
    <string name="alphabet_next_button_text">Next</string>
    <string name="word_showcase_play_button_text">Play</string>
    <string name="word_showcase_activity_label">Word Showcase</string>
    <string name="dolch_list_button_content_description">Click here to start Word List Activity</string>
    <string name="exercises_button_content_description">Click here to start Alphabet exercises</string>
    <string name="vocabulary_builder_button_content_description">Click here to view Vocabulary Builder</string>
    <string name="speech_recognition_button_content_description">Click here to convert speech to on screen text</string>
    <string name="ocr_button_content_description">Click here to convert an image to text and speech</string>
    <string name="text_to_speech_button_content_description">Click here to convert text to speech</string>
    <string name="home_icon_title">Home</string>
    <string name="dolch_list_word_text_view_content_description">This is a dolch list word</string>
    <string name="dolch_list_prev_button_content_description">Previous button, click here to go to the previous word</string>
    <string name="dolch_list_next_button_content_description">Next button, click here to go to the next word</string>
    <string name="dolch_list_play_button_content_description">Play button, click here to hear the above word</string>
    <string name="alphabet_exercise_record_button_text">Record</string>
    <string name="alphabter_exercise_previous_button_content_description">Previous button, click here to go to the previous word</string>
    <string name="alphabet_exercise_next_button_content_description">Next button, click here to go to the next word</string>
    <string name="alphabet_exercise_record_button_content_description">Record button, hold down and say a word to hear your own pronunciation</string>
    <string name="alphabet_exercise_play_button_content_description">Play button, click here to hear the above word</string>
    <string name="word_showcase_stop_button_text">Stop</string>
    <string name="splash_screen_text_view">Loading</string>
    <string name="word_showcase_play_button_content_description">Play button, click here to hear the above word</string>
    <string name="word_showcase_stop_button_content_description">Stop button, click here to stop playing sound</string>
    <string name="word_showcase_describe_button_text">Define</string>
    <string name="word_showcase_define_button_content_description">Define button, click here to define the above word</string>
    <string name="logout_button_text">SIGN OUT</string>
    <string name="text_to_speech_go_button_content_description">Click here to convert text to speech</string>
    <string name="tts_edit_text_content_description">Enter the text you wish to convert here</string>
    <string name="alphabet_activity_help">Hold your finger down on a button to hear what it does</string>
    <string name="dolch_list_help">Hold your finger down on a button to hear what it does</string>
    <string name="login_activity_help">Hold your finger down on a button to hear what it does</string>
    <string name="play_recording_button_text">Hear</string>
    <string name="hear_button_content_description">Hear button, click here to hear the sound recording</string>

</resources>
