<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/card_padding"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/card_background"
        android:padding="20dp"
        android:orientation="vertical">

        <!--  Email TextField -->
        <EditText
            android:id="@+id/login_email_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Email Address"
            style="@style/Widget.AppCompat.EditText"
            android:textSize="20sp"
            android:contentDescription="@string/enter_email_address_content_description"/>

        <!--  Password TextField -->
        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            style="@style/Widget.AppCompat.EditText"
            android:password="true"
            android:hint="@string/password_input_hint"
            android:contentDescription="@string/enter_password_content_description"/>

        <!--  Error message -->
        <TextView
            android:id="@+id/login_error_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <!--  Login Button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/generic_button"
            android:text="@string/login_button_text"
            android:onClick="onLoginButtonClick"
            android:contentDescription="@string/login_button_content_description"/>

        <!--  Link to Registration Screen -->
        <Button
            android:id="@+id/link_to_register"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:background="@drawable/generic_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/register_account_button_text"
            android:onClick="onRegisterbuttonClick"
            android:contentDescription="@string/register_screen_button_content_description"/>
    </LinearLayout>

</LinearLayout>