<?xml version="1.0" encoding="utf-8"?>
<!--layout for alphabet exercise-->
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/viewSwitcher"
android:layout_width="fill_parent"
android:layout_height="fill_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/adult_literacy_full_logo" />

    <TextView
        android:id="@+id/splash_screen_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/splash_screen_text_view"
        android:textSize="40dp"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:progress="0" />

</LinearLayout>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/card_padding"
        android:background="@color/background_color">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/card_background"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/alphabet_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drag_drop_text"
                        android:gravity="center_horizontal|center_vertical"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                    </LinearLayout>


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alphabetFavouriteStarCheckBox"
                    android:button="@drawable/star_button"
                    android:contentDescription="@string/alphabet_word_favourite_hint" />


            </RelativeLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/alphabet_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cat"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/alphabet_button_prev"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/generic_button"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/alphabet_previous_button_text"
                    android:contentDescription="@string/alphabter_exercise_previous_button_content_description" />

                <Button
                    android:id="@+id/alphabet_button_next"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/generic_button"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/alphabet_next_button_text"
                    android:contentDescription="@string/alphabet_exercise_next_button_content_description" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/play_recording_button"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/generic_button"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/play_recording_button_text"
                    android:contentDescription="@string/hear_button_content_description" />

                <Button
                    android:id="@+id/alphabet_record_button"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/generic_button"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/alphabet_exercise_record_button_text"
                    android:contentDescription="@string/alphabet_exercise_record_button_content_description" />

                <Button
                    android:id="@+id/alphabet_button_play"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/generic_button"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:text="@string/alphabet_play_button_text"
                    android:contentDescription="@string/alphabet_exercise_play_button_content_description" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</ViewSwitcher>
