<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/card_padding"
    android:orientation="vertical"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background"
        android:layout_weight="3">

        <ListView
            android:id="@+id/saved_words_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/card_padding"
            android:paddingStart="@dimen/card_padding"
            android:paddingRight="@dimen/card_padding"
            android:paddingEnd="@dimen/card_padding"
            android:paddingBottom="3dp">

        </ListView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_button_text"
                android:layout_margin="10dp"
                android:background="@drawable/generic_button"
                android:id="@+id/logout_button"
                android:onClick="onLogoutButtonClick"
                android:padding="5dp"/>

            <Button
                android:id="@+id/login_button"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/generic_button"
                android:text="@string/login_button_text"
                android:padding="5dp"
                android:onClick="onLoginButtonClick"
                android:contentDescription="@string/login_button_content_description" />
            </RelativeLayout>
    </LinearLayout>

</LinearLayout>